--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
               <a href="#"><em class="fa-solid fa-images"></em>Photos</a>
             </li>
             <li>
-              <a href="/user.html"><em class="fa-solid fa-users"></em>User</a>
+              <a href="user.html"><em class="fa-solid fa-users"></em>User</a>
             </li>
             <li>
               <a href="#"><em class="fa-solid fa-square-parking"></em>Parking</a>
             </li>
             <li>
-              <a href="/about_us.html"
+              <a href="about_us.html"
                 ><em class="fa-solid fa-address-card"></em>About us</a
               >
             </li>
             <li>
-              <a href="/signupform.html"
+              <a href="signupform.html"
                 ><em class="fa-solid fa-user-plus"></em>Sign Up</a
               >
             </li>
